syntax = "proto3";

message RegistrationReq {
  repeated Label labels = 1;
}

message RegistrationResp {
  string NodeId = 1;
}

message Label {
  string key = 1;
  Value value = 2;
}

message Value {
  enum ValueTYpe {
    Bool = 0;
    Float64 = 1;
    String = 2;
  };
  ValueTYpe type = 1;
  bytes marshalled = 2;
}

message BoolValue {
  bool value = 1;
}

message Float64Value {
  double value = 1;
}

message StringValue {
  string value = 1;
}